<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">快快贷后台</string>
    <string name="visual_reports">可视化报表</string>

    <string name="web_traffic">网页流量</string>
    <string name="pc_web_traffic">PC网站流量</string>
    <string name="app_traffic">App流量</string>
    <string name="kkd_app_traffic">快快贷App流量</string>
    <string name="regist_to_invest_numbers">注册至理财人数</string>
    <string name="regist_to_invest_conversion_ratio">注册至理财转化率</string>
    <string name="new_invest_numbers">新增理财人数</string>
    <string name="new_invest_money">新增理财金额</string>
    <string name="new_invest_money_per_capita">新增理财人均</string>
    <string name="new_old_invest_numbers">新老用户理财人数</string>
    <string name="new_old_invest_money">新老用户理财金额</string>
    <string name="new_old_invest_money_per_capita">新老用户理财人均</string>
    <string name="capital_state">资金情况</string>
    <string name="remain_state">留存情况</string>
    <string name="invest_again_numbers">复投人数</string>
    <string name="invest_again_ratio">复投率</string>

    <string name="financial_statistics">财务统计</string>
    <string name="kpi">目标管理</string>
    <string name="bid_statistics">投标统计</string>
    <string name="bid_detail">投标详情</string>
    <string name="fail_bid_statistics">流标统计</string>
    <string name="fail_bid_detail">流标详情</string>
    <string name="recharge_withdraw_statistics">用户充值、提现统计</string>
    <string name="recharge_withdraw_detail">用户充值、提现详情</string>
    <string name="refund_investor_statistics">还款统计-投资人</string>
    <string name="refund_borrower_statistics">还款统计-借款人</string>
    <string name="refund_detail">还款详情</string>
    <string name="management_fee">管理费</string>
    <string name="management_fee_detail">管理费详情</string>
    <string name="voucher_grant">优惠券发放</string>
    <string name="voucher_grant_detail">优惠券发放详情</string>
    <string name="voucher_use">优惠券使用</string>
    <string name="voucher_use_detail">优惠券使用详情</string>
    <string name="cash_back">好友返现</string>
    <string name="cash_back_detail">好友返现详情</string>
    <string name="loan_detail">标的放款明细</string>
    <string name="service_fee">服务费</string>
    <string name="service_fee_detail">服务费详情</string>
    <string name="user_financial_details">用户理财明细(新浪)</string>

    <string name="back">返回</string>
    <string name="menu">菜单</string>
    <string name="empty_data">暂无数据</string>
    <string name="kkd_paltform_invest_again_ratio">快快贷平台复投率</string>
    <string name="hint_login_acount">请输入用户名</string>
    <string name="hint_login_pwd">请输入密码</string>
    <string name="login">登录</string>
    <string name="name_null">用户名不能为空</string>
    <string name="pwd_null">密码不能为空</string>
    <string name="exex_data">正在加载数据</string>
    <string name="click_again_exit">再按一次退出程序</string>
    <string name="query">查询</string>
    <string name="clear_query">清空查询</string>
    <string name="group_check">组织架构查看</string>
    <string name="start_date">起始日期</string>
    <string name="end_date">截止日期</string>
    <string name="start">起始</string>
    <string name="end">截止</string>
    <string name="mom">环比</string>
    <string name="channel">渠道</string>
    <string name="all">所有</string>
    <string name="dingqibao">定期宝</string>
    <string name="fangbaobao">房宝宝</string>
    <string name="jingyingbao">精英宝</string>
    <string name="tiantianzhuan">天天赚</string>
    <string name="recharge">充值</string>
    <string name="withdraw">提现</string>
    <string name="activation_user">激活用户</string>
    <string name="active_user">活跃用户</string>
    <string name="start_num">启动次数</string>
    <string name="regist">注册</string>
    <string name="bingcard">绑卡</string>
    <string name="authentication">实名</string>
    <string name="conversion_ratio">注册至理财转化率(%)</string>
    <string name="regist_authentication">实名转化率</string>
    <string name="regist_bingcard">绑卡转化率</string>
    <string name="regist_recharge">充值转化率</string>
    <string name="regist_invest">购买转化率</string>
    <string name="invest">投资</string>
    <string name="invest_no_money_yes">无投资有余额人数</string>
    <string name="invest_yes_money_no">投资无余额人数</string>
    <string name="invest_yes_money_yes">投资有余额人数</string>
    <string name="numbers">人数</string>
    <string name="invest_once_num">首投人数</string>
    <string name="invest_twice_num">复投人数</string>
    <string name="invest_three_num">三投人数</string>
    <string name="invest_four_num">四投人数</string>
    <string name="invest_five_num">五投人数</string>
    <string name="invest_twice_ratio">复投率</string>
    <string name="invest_three_ratio">三投率</string>
    <string name="invest_four_ratio">四投率</string>
    <string name="invest_five_ratio">五投率</string>
    <string name="invest_money_per_current">当天注册</string>
    <string name="invest_money_per_1_5">前1天至前5天注册</string>
    <string name="invest_money_per_6_30">前6天至前30天注册</string>
    <string name="invest_money_per_31">前31天及更久注册</string>
    <string name="invest_num_current">当天注册</string>
    <string name="invest_num_1_5">前1天至前5天注册</string>
    <string name="invest_num_6_30">前6天至前30天注册</string>
    <string name="invest_num_31">前31天及更久注册</string>
    <string name="invest_money_current">当天注册</string>
    <string name="invest_money_1_5">前1天至前5天注册</string>
    <string name="invest_money_6_30">前6天至前30天注册</string>
    <string name="invest_money_31">前31天及更久注册</string>
    <string name="no_invest_num_1">投资1次人数</string>
    <string name="no_invest_num_2_5">投资2-5次人数</string>
    <string name="no_invest_num_5">投资5次以上人数</string>
    <string name="no_invest_per_1">投资1次人均金额</string>
    <string name="no_invest_per_2_5">投资2-5次人均金额</string>
    <string name="no_invest_per_5">投资5次以上人均金额</string>
    <string name="no_invest_money_1">投资1次的金额</string>
    <string name="no_invest_money_2_5">投资2-5次的金额</string>
    <string name="no_invest_money_5">投资5次以上的金额</string>
    <string name="unknown">未知</string>
    <string name="date">日期</string>
    <string name="username_phone">用户名/已验证手机</string>
    <string name="username_phone_empty">用户名/已验证手机不能为空</string>


    <string name="subject_name">标的名称</string>
    <string name="subject_money">标的金额</string>
    <string name="subject_deadline">标的期限</string>
    <string name="subject_rate">标的利率</string>
    <string name="subject_type">标的类型</string>
    <string name="subject_sum_amount">标的总额</string>
    <string name="subject_status">标的状态</string>
    <string name="subject_id">标的Id</string>
    <string name="subject_real_collect_money">实际募集</string>
    <string name="charge_time">收费时间</string>
    <string name="credit_rating">信用级别</string>
    <string name="cash_back_amount">返现总金额</string>
    <string name="customer_id">客户编号</string>
    <string name="name">姓名</string>
    <string name="phone">手机号</string>
    <string name="cash_back_time">返现时间</string>
    <string name="cash_back_money">返现金额</string>

    <string name="grant_date">发放日期</string>
    <string name="dixian_grant_money">抵现券发放金额</string>
    <string name="tixian_grant_money">提现券发放金额</string>
    <string name="faxian_grant_money">返现券发放金额</string>
    <string name="jiaxi_grant_num">加息券发放数量</string>

    <string name="user_id">用户Id</string>
    <string name="user_nickname">用户昵称</string>
    <string name="realname">真实姓名</string>
    <string name="voucher_give_time">券赠送时间</string>
    <string name="voucher_type">券类型</string>
    <string name="voucher_amount">券金额/加息</string>

    <string name="use_date">使用日期</string>
    <string name="use_time">使用时间</string>
    <string name="dixian_use_money">抵现券使用金额</string>
    <string name="tixian_use_money">提现券使用金额</string>
    <string name="faxian_use_money">返现券使用金额</string>
    <string name="jiaxi_use_num">加息券使用数量</string>
    <string name="voucher_source">奖励来源</string>

    <string name="summary">摘要</string>
    <string name="trade_money">交易金额</string>
    <string name="current_balance">当前余额</string>
    <string name="financial_date">理财日期</string>

    <string name="vip_recharge">超级用户充值</string>
    <string name="vip_withdraw">超级用户提现</string>
    <string name="normal_withdraw">普通用户提现</string>
    <string name="normal_recharge">普通用户充值</string>
    <string name="recharge_amount">充值总金额</string>
    <string name="withdraw_amount">提现总金额</string>
    <string name="current_withdraw_num">当日提现笔数</string>
    <string name="current_success_recharge_num">当日成功提现笔数</string>
    <string name="current_success_recharge_with_voucher_num">当日成功提现用券数量</string>
    <string name="company_poundage">公司手续费</string>

    <string name="normal_invest_success_money">普通用户成功投标金额</string>
    <string name="normal_invest_success_count">普通用户成功投标笔数</string>
    <string name="normal_invest_fail_money">普通用户投资失败金额</string>
    <string name="normal_invest_fail_count">普通用户投资失败笔数</string>
    <string name="vip_invest_success_money">超级用户成功投标金额</string>
    <string name="vip_invest_success_count">超级用户成功投标笔数</string>
    <string name="vip_invest_fail_money">超级用户投资失败金额</string>
    <string name="vip_invest_fail_count">超级用户投资失败笔数</string>
    <string name="success_money">合计成功金额</string>
    <string name="success_count">合计成功笔数</string>
    <string name="fail_money">合计失败金额</string>
    <string name="fail_count">合计失败笔数</string>

    <string name="borrower_nickname">借款人昵称</string>
    <string name="borrower_realname">姓名</string>
    <string name="borrower_name">借款人姓名</string>
    <string name="loan_money">放款金额</string>
    <string name="loan_time">放款时间</string>

    <string name="serial_number">序号</string>
    <string name="order_number">订单号</string>
    <string name="operate_time">操作时间</string>
    <string name="operate_type">操作方式</string>
    <string name="money">金额</string>
    <string name="invest_real_money">实际投资</string>
    <string name="invest_vocher_money">使用红包</string>
    <string name="popularizing_channel">推广渠道</string>
    <string name="invest_channel">投标渠道</string>
    <string name="invest_status">投标状态</string>
    <string name="ground_time">上架时间</string>

    <string name="actual_refund_date">实际还款日</string>
    <string name="refund_stage_num">第几期还款</string>
    <string name="contact_refund_date">合约还款日</string>
    <string name="principal">本金</string>
    <string name="interest">利息</string>
    <string name="punish_interest">罚息</string>
    <string name="overdue_management_fee">逾期管理费</string>
    <string name="total">合计</string>
    <string name="actual_refund_money">实际还款金额</string>
    <string name="actual_invest_money">实际投标</string>
    <string name="invest_money">总投标</string>
    <string name="refund_money">还款金额</string>
    <string name="award_interest">加息</string>
    <string name="actual_refund_money_tatal">实际还款总金额</string>
    <string name="whether_pay_off">是否还清</string>
    <string name="product_type">产品类型</string>

    <string name="day_target">日目标</string>
    <string name="month_target">月目标</string>
    <string name="quarter_target">季度目标</string>
    <string name="week_target">周目标</string>

    <string name="year">年度</string>
    <string name="quarter">季度</string>
    <string name="q1th">第一季度</string>
    <string name="q2th">第二季度</string>
    <string name="q3th">第三季度</string>
    <string name="q4th">第四季度</string>

    <string name="ec_statistics">EC统计</string>
    <string name="work_target">工作目标</string>
    <string name="work_log">工作日志</string>
    <string name="news_center">消息中心</string>
    <string name="write_log">书写日志</string>
    <string name="check_history_log">查看历史日志</string>
    <string name="news">消息</string>
    <string name="follow">我的跟踪</string>


</resources>