<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="5dp"
              android:layout_marginRight="5dp"
              android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">

        <include layout="@layout/view_line_v_m"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <include layout="@layout/view_line_h"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:text="@string/serial_number"
                android:textColor="@color/txt_color2"
                android:textSize="12dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:text="@string/order_number"
                android:textColor="@color/txt_color2"
                android:textSize="12dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:text="@string/user_id"
                android:textColor="@color/txt_color2"
                android:textSize="12dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="@color/txt_color2"
                android:textSize="12dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:text="@string/phone"
                android:textColor="@color/txt_color2"
                android:textSize="12dp">
            </TextView>

            <include layout="@layout/view_line_h"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:text="@string/operate_time"
                android:textColor="@color/txt_color2"
                android:textSize="12dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:gravity="center"
                android:text="@string/invest_real_money"
                android:textColor="@color/txt_color2"
                android:textSize="12dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:text="@string/invest_vocher_money"
                android:textColor="@color/txt_color2"
                android:textSize="12dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:text="@string/popularizing_channel"
                android:textColor="@color/txt_color2"
                android:textSize="12dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:text="@string/invest_channel"
                android:textColor="@color/txt_color2"
                android:textSize="12dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:text="@string/invest_status"
                android:textColor="@color/txt_color2"
                android:textSize="12dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:text="@string/subject_name"
                android:textColor="@color/txt_color2"
                android:textSize="12dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:text="@string/subject_type"
                android:textColor="@color/txt_color2"
                android:textSize="12dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:text="@string/subject_sum_amount"
                android:textColor="@color/txt_color2"
                android:textSize="12dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:text="@string/subject_deadline"
                android:textColor="@color/txt_color2"
                android:textSize="12dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:text="@string/subject_rate"
                android:textColor="@color/txt_color2"
                android:textSize="12dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:text="@string/subject_status"
                android:textColor="@color/txt_color2"
                android:textSize="12dp">
            </TextView>

            <include layout="@layout/view_line_h"/>
        </LinearLayout>

        <include layout="@layout/view_line_v_m"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <include layout="@layout/view_line_h"/>

            <TextView
                android:id="@+id/tv_serial_number"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:textColor="@color/txt_color1"
                android:textSize="14dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:id="@+id/tv_order_number"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:textColor="@color/txt_color1"
                android:textSize="14dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:id="@+id/tv_user_id"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:textColor="@color/txt_color1"
                android:textSize="14dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:textColor="@color/txt_color1"
                android:textSize="14dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:id="@+id/tv_phone"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:textColor="@color/txt_color1"
                android:textSize="14dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:id="@+id/tv_operate_time"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:textColor="@color/txt_color1"
                android:textSize="14dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:id="@+id/tv_invest_real_money"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:textColor="@color/txt_color1"
                android:textSize="14dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:id="@+id/tv_invest_vocher_money"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:textColor="@color/txt_color1"
                android:textSize="14dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:id="@+id/tv_popularizing_channel"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:textColor="@color/txt_color1"
                android:textSize="14dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:id="@+id/tv_invest_channel"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:textColor="@color/txt_color1"
                android:textSize="14dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:id="@+id/tv_invest_status"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:textColor="@color/txt_color1"
                android:textSize="14dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:id="@+id/tv_subject_name"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:textColor="@color/txt_color1"
                android:textSize="14dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:id="@+id/tv_subject_type"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:textColor="@color/txt_color1"
                android:textSize="14dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:id="@+id/tv_subject_sum_amount"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:textColor="@color/txt_color1"
                android:textSize="14dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:id="@+id/tv_subject_deadline"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:textColor="@color/txt_color1"
                android:textSize="14dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:id="@+id/tv_subject_rate"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:textColor="@color/txt_color1"
                android:textSize="14dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:id="@+id/tv_subject_status"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:textColor="@color/txt_color1"
                android:textSize="14dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

        </LinearLayout>

        <include layout="@layout/view_line_v_m"/>
    </LinearLayout>

</LinearLayout>

