<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginLeft="5dp"
              android:layout_marginRight="5dp"
              android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp">

        <include layout="@layout/view_line_v_m"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <include layout="@layout/view_line_h"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:text="@string/actual_refund_date"
                android:textColor="@color/txt_color2"
                android:textSize="12dp">
            </TextView>

            <include layout="@layout/view_line_h"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:text="@string/subject_id"
                android:textColor="@color/txt_color2"
                android:textSize="12dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:text="@string/subject_name"
                android:textColor="@color/txt_color2"
                android:textSize="12dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:text="@string/subject_type"
                android:textColor="@color/txt_color2"
                android:textSize="12dp">
            </TextView>

            <include layout="@layout/view_line_h"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:text="@string/refund_stage_num"
                android:textColor="@color/txt_color2"
                android:textSize="12dp">
            </TextView>

            <include layout="@layout/view_line_h"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:text="@string/principal"
                android:textColor="@color/txt_color2"
                android:textSize="12dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:text="@string/interest"
                android:textColor="@color/txt_color2"
                android:textSize="12dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:text="@string/service_fee"
                android:textColor="@color/txt_color2"
                android:textSize="12dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:text="@string/punish_interest"
                android:textColor="@color/txt_color2"
                android:textSize="12dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:text="@string/overdue_management_fee"
                android:textColor="@color/txt_color2"
                android:textSize="12dp">
            </TextView>

            <include layout="@layout/view_line_h"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:gravity="center"
                android:text="@string/actual_refund_money_tatal"
                android:textColor="@color/txt_color2"
                android:textSize="12dp">
            </TextView>

            <include layout="@layout/view_line_h"/>


        </LinearLayout>

        <include layout="@layout/view_line_v_m"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <include layout="@layout/view_line_h"/>

            <TextView
                android:id="@+id/tv_actual_refund_date"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:textColor="@color/txt_color1"
                android:textSize="14dp">
            </TextView>

            <include layout="@layout/view_line_h"/>


            <TextView
                android:id="@+id/tv_subject_id"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:textColor="@color/txt_color1"
                android:textSize="12dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:id="@+id/tv_subject_name"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:textColor="@color/txt_color1"
                android:textSize="14dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:id="@+id/tv_subject_type"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:textColor="@color/txt_color1"
                android:textSize="14dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:id="@+id/tv_refund_stage_num"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:textColor="@color/txt_color1"
                android:textSize="14dp">
            </TextView>

            <include layout="@layout/view_line_h"/>


            <TextView
                android:id="@+id/tv_principal"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:textColor="@color/txt_color1"
                android:textSize="14dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:id="@+id/tv_interest"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:textColor="@color/txt_color1"
                android:textSize="14dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:id="@+id/tv_service_fee"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:textColor="@color/txt_color1"
                android:textSize="14dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:id="@+id/tv_punish_interest"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:textColor="@color/txt_color1"
                android:textSize="14dp">
            </TextView>

            <include layout="@layout/view_line_h"/>

            <TextView
                android:id="@+id/tv_overdue_management_fee"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:textColor="@color/txt_color1"
                android:textSize="14dp">
            </TextView>

            <include layout="@layout/view_line_h"/>


            <TextView
                android:id="@+id/tv_actual_refund_money_tatal"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:gravity="center"
                android:textColor="@color/txt_color1"
                android:textSize="14dp">
            </TextView>

            <include layout="@layout/view_line_h"/>


        </LinearLayout>

        <include layout="@layout/view_line_v_m"/>
    </LinearLayout>

</LinearLayout>

